--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                       <img class="techno"  src="tech/github.png">
                     </div>
                     <div class="ob1">
-                      <img class="techno"  src="tech/jquery.png">
+                      <img class="techno"  src="tech/jQuery.png">
                     </div>
                     <div class="ob1">
                       <img class="techno"  src="tech/vue.svg">
