--- a/index.html
+++ b/index.html
@@ -89,17 +89,26 @@
                  <h3 id="ukon">Ukończon<span class="szk">e</span> szkoł<span class="szk">y</span></h3></a>
                  <hr class="lina">
                  <ul>
-                 <li class="a21">Programowanie aplikacji internetowych i mobilnych - obecnie</li>
+                 <li class="a21">Programista aplikacji internetowych i mobilnych </li>
                  <hr class="linia">
-                 <li class="a22">Technik Informatyk - ukończone </li>
+                 <li class="a22">Technik Informatyk </li>
                  <hr class="lini">
-                 <li class="a23">Politechnika Śląska - nieukończone </li>
+                 <li class="a23">Politechnika Śląska - Ukończony jeden rok  </li>
                  <hr class="lini">
                  </ul>
                 <a name="kursy">
-                 <h3>Kurs<span class="szk">y</span>/ Webinar<span class="szk">y</span></h3></a>
+                 <h3>Kurs<span class="szk">y</span>/Szkoleni<span class="szk">a</span></h3></a>
                  <hr class="a">
                  <ul>
+                 
+                 <li class="a12">Teb Edukacja - Certyfikat z praktycznej znajomości języka programowania HTML I XHTML</li>
+                 <hr class="b">
+                 <li class="a12">Teb Edukacja - Certyfikat z praktycznej znajomości języka programowania CSS</li>
+                  <hr class="b">
+                 <li class="a12">Teb Edukacja - Certyfikat z praktycznej znajomości języka programowania JAVA SCRIPT</li>
+                 <hr class="b">
+                 <li class="a12">Quality Assurance Poland - Szkolenie z PN -EN ISO 50001 </li>
+                 <hr class="b">
                  <li class="a11">Cisco Networking Academy - NDG Linux Unhatched</li>
                  <hr class="b">
                  <li class="a12">Cisco Networking Academy - Introduction to Packet Tracer course</li>
