--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             </div>
             <div class="znam">
                   <div class="ob1">
-                    <img class="techno" src="tech/html5.png">
+                    <img class="techno" src="tech/html5.png" alt="html">
                   </div>
                   <div class="ob1">
-                    <img class="techno"  src="tech/css3.png">
+                    <img class="techno"  src="tech/css3.png" alt="css3">
                   </div>
                   <div class="ob1">
                     <img class="techno"  src="tech/javascript.png">
@@ -163,10 +163,10 @@
           <ul><a name="napisz">
           <li id="tak">Kontakt</li></a>
           <li><div id="kon">
-          <img src="logo/mail.png" ><a href="mailto:daniel_trzecisnki@onet.pl">daniel_trzecinski@onet.pl</a>
+          <img src="logo/mail.png" alt="mail"><a href="mailto:daniel_trzecisnki@onet.pl">daniel_trzecinski@onet.pl</a>
           </div> </li>
          <li><div id="tel">
-         <img src="logo/telefon.png">731080734</div></li>
+         <img src="logo/telefon.png" alt="telefon">731080734</div></li>
          </ul>
         </div> 
          
