--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     <img class="techno"  src="tech/css3.png" alt="css3">
                   </div>
                   <div class="ob1">
-                    <img class="techno"  src="tech/javascript.png">
+                    <img class="techno"  src="tech/javascript.png" alt="javascript">
                    </div>
                    <div class="ob1">
-                    <img class="techno"  src="tech/technik.png">
+                    <img class="techno"  src="tech/technik.png" alt="technik">
                   </div>
                    <div class="ob1">
                     <img class="techno"  src="tech/bootstrap.png">
@@ -171,7 +171,7 @@
         </div> 
          
          <div id="praw">
-         <img id="autor" src="logo/autor.png"> 2021 Daniel Trzeciński
+         <img id="autor" src="logo/autor.png" alt="logo"> 2021 Daniel Trzeciński
          </div>
             
       </footer>    
