--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <img class="techno"  src="tech/technik.png" alt="technik">
                   </div>
                    <div class="ob1">
-                    <img class="techno"  src="tech/bootstrap.png">
+                    <img class="techno"  src="tech/bootstrap.png" alt="bootstrap">
                   </div>
                    <div class="ob1">
                     <img class="techno"  src="tech/wordpress1.png">
