--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <img class="techno"  src="tech/bootstrap.png" alt="bootstrap">
                   </div>
                    <div class="ob1">
-                    <img class="techno"  src="tech/wordpress1.png">
+                    <img class="techno"  src="tech/wordpress1.png" alt="wordpress1">
                   </div> 
              </div>  
             </div>
@@ -65,13 +65,13 @@
                   </div>
                   <div class="ucze">
                     <div class="ob1">
-                      <img class="techno"  src="tech/java.png">
+                      <img class="techno"  src="tech/java.png" alt="java">
                     </div>
                     <div class="ob1">
-                      <img class="techno"  src="tech/php.svg">
+                      <img class="techno"  src="tech/php.svg" alt="php">
                     </div>
                      <div class="ob1">
-                      <img class="techno"  src="tech/sql.png">
+                      <img class="techno"  src="tech/sql.png" alt="sql">
                     </div>
                     <div class="ob1">
                       <img class="techno"  src="tech/github.png">
