--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                       <img class="techno"  src="tech/sql.png" alt="sql">
                     </div>
                     <div class="ob1">
-                      <img class="techno"  src="tech/github.png">
+                      <img class="techno"  src="tech/github.png" alt="github">
                     </div>
                     <div class="ob1">
-                      <img class="techno"  src="tech/jquery.png">
+                      <img class="techno"  src="tech/jquery.png" alt="jquery">
                     </div>
                     <div class="ob1">
-                      <img class="techno"  src="tech/vue.svg">
+                      <img class="techno"  src="tech/vue.svg" alt="vue">
                     </div>
              </div>
              </div>
@@ -139,7 +139,7 @@
                     </div>
                     <div class="fotka">
                       
-                       <a class="thumbnail" href="#thumb"><img class="obcy" src="projekty/obcy.png" border="0" /><span><img class="alie" src="projekty/obcy.png" /><br />Alien na Zaliczenie</span></a>
+                       <a class="thumbnail" href="#thumb"><img class="obcy" src="projekty/obcy.png" alt="obcy" border="0" /><span><img class="alie" src="projekty/obcy.png" /><br />Alien na Zaliczenie</span></a>
 
                      </div>
                 </div>
@@ -152,7 +152,7 @@
                         <p>Portfolio</p>
                     </div> 
                     <div class="fotka">
-                        <a class="thumbnail" href="#thumb"><img class="obcy" src="projekty/portfolio.png" border="0" /><span><img class="alie" src="projekty/portfolio.png" />
+                        <a class="thumbnail" href="#thumb"><img class="obcy" src="projekty/portfolio.png" alt="portfolio" border="0" /><span><img class="alie" src="projekty/portfolio.png" />
                         <br/>Portfolio</span></a>
                     </div>
                 </div>
