--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="#info">O Mnie</a></li>
-                <li><a href="https://github.com/DanielTRZ" target="_blank">GitHub</a></li>
+                <li><a href="https://github.com/DanielTRZ" target="_blank" rel="noreferrer">GitHub</a></li>
                 <li><a href="#szkola">Wykształcenie</a></li>
                 <li><a href="#kursy">Kursy/Webinary</a></li>
                 <li><a href="#napisz">Kontakt</a></li>
