--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
                  <h3>Kurs<span class="szk">y</span>/Szkoleni<span class="szk">a</span></h3></a>
                  <hr class="a">
              <ul>
+                 <li class="a12">Akademia Ekonomiczno-Humanistyczna w Warszawie - Projektowanie Witryn Internetowych</li>
+                 <hr class="b">
                  <li class="a12">Teb Edukacja - Certyfikat z praktycznej znajomości języka programowania HTML I XHTML</li>
                  <hr class="b">
                  <li class="a12">Teb Edukacja - Certyfikat z praktycznej znajomości języka programowania CSS</li>
