--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
                   <hr class="b">
                  <li class="a12">Teb Edukacja - Certyfikat z praktycznej znajomości języka programowania JAVA SCRIPT</li>
                  <hr class="b">
+                <li class="a12">Ośrodek Przetwarzania Informacji-Państwowy Instytut badawczy - Podstawy Sztucznej Inteligencji </li>
+                 <hr class="b">
                  <li class="a12">Quality Assurance Poland - Szkolenie z PN -EN ISO 50001 </li>
                  <hr class="b">
                  <li class="a11">Cisco Networking Academy - NDG Linux Unhatched</li>
