--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
          <p>
           Entuzjasta nowych technologii, pasjonujący się nimi od dziecka, dla którego codzienne obowiązki są czymś dużo więcej niż pracą.
           Śledzenie trendów, branżowych nowinek technicznych
-          to hobby wypełniajace wolny czas.<br><br>
-          
+          to hobby wypełniajace wolny czas.<br>
           </p>
        </div>
      </div>   
