--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Trzeciński - Portfolio</title>
     <link rel="stylesheet" href="styl.css"> 
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">  
+  
+  </head>
+  <body>
+ 
+<!--<audio autoplay loop>
+<source src="theme-music.mp3" type="audio/mpeg">
+</audio>
+ -->
+ 
+
+  
+    
+    <h1>Batman- Returns </h1>
+    <canvas id="gra" width="1280px" height="580px"></canvas>
+    <script src="skrypt.js"></script>
+
+  </body>
+</html>
+
 </head>       
 <body>
 <main>      
