--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                  <hr class="b">
                 <li class="a12">Ośrodek Przetwarzania Informacji-Państwowy Instytut badawczy - Podstawy Sztucznej Inteligencji </li>
                  <hr class="b">
-                 <li class="a12">Uniwersytet Śląski w Katowicach  -  Myślenie komputacyjne . Rozwijanie kompetencji kluczowych związanych<br>
+                 <li class="a12">Uniwersytet Śląski w Katowicach  -  Myślenie komputacyjne . Rozwijanie kompetencji kluczowych związanych
                  z wykorzystywaniem technologii.</li>
                  <hr class="b">
                  <li class="a12">Quality Assurance Poland - Szkolenie z PN -EN ISO 50001 </li>
