--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Trzeciński - Portfolio</title>
     <link rel="stylesheet" href="styl.css"> 
+    <meta name="keywords" content="Portfolio, Daniel Trzeciński"/>
+    <meta name="robots" content="follow"/>
+    <meta name="description" content="szkoły, kursy,szkolenia."/>
+    
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">  
   
   </head>     
@@ -115,7 +119,7 @@
                  <hr class="b">
                  <li class="a12">Quality Assurance Poland - Szkolenie z PN -EN ISO 50001 </li>
                  <hr class="b">
-                 <li class="a11">Cisco Networking Academy - NDG Linux Unhatched</li>
+                 <li class="a11">Microsoft Virtual Academy - Wprowadzenie do Active Directory Domain Services</li>
                  <hr class="b">
                  <li class="a12">Cisco Networking Academy - Introduction to Packet Tracer course</li>
                  <hr class="c">
@@ -131,7 +135,7 @@
                  <hr class="h">
                  <li class="a18">Microsoft Virtual Academy - Wprowadzenie do Active Directory </li>
                  <hr class="i">
-                 <li class="a19">Microsoft Virtual Academy - Wprowadzenie do Active Directory Domain Services </li>
+                 <li class="a19">Cisco Networking Academy - NDG Linux Unhatched</li>
                  <hr class="j">
                  <li class="a20"> Comarch - Podstawy programowania w Java</li>
                  <hr class="k">
