--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
                     <div class="ob1">
                       <img class="techno"  src="tech/jquery.png" alt="jquery">
                     </div>
-                    <div class="ob1">
-                      <img class="techno"  src="tech/vue.svg" alt="vue">
+                    
+                     <div class="ob1">
+                      <img class="techno"  src="tech/unity.png" alt="unity">
+                    </div>
+                     <div class="ob1">
+                      <img class="techno"  src="tech/unreal.png" alt="unreal">
                     </div>
              </div>
              </div>
