--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
               <div class="tech">
               <div class="nap">
-                    <p id="and">Technologie których sie uczę:</p>                 
+                    <p id="and">Technologie których się uczę:</p>                 
                   </div>
                   <div class="ucze">
                     <div class="ob1">
