--- a/index.html
+++ b/index.html
@@ -93,11 +93,13 @@
                  <h3 id="ukon">Ukończon<span class="szk">e</span> szkoł<span class="szk">y</span></h3></a>
                  <hr class="lina">
                  <ul>
+                 <li class="a21"> Game Design - projektowanie i testowanie gier </li>
+                 <hr class="linia">
                  <li class="a21">Programista aplikacji internetowych i mobilnych </li>
                  <hr class="linia">
                  <li class="a22">Technik Informatyk </li>
                  <hr class="lini">
-                 <li class="a23">Politechnika Śląska - Ukończony jeden rok  </li>
+                 <li class="a23">Politechnika Śląska - Wyższe niepełne  </li>
                  <hr class="lini">
                  </ul>
                 <a name="kursy">
